# ecto-fdb-relational

./: .dialyzer_ignore.exs  .gitignore  ADR.md  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml
bench/: harness.ex
bench/rfd/: 0001-tpcc-scaling.md  0002-zonefabric-scaling.md  0003-assetcdn-scaling.md  0004-cassie-scaling.md  README.md
bench/tpcc/: loader.ex  procedures.ex  repo.ex  schema.ex  schemas.ex
lib/: ecto_fdb_relational.ex
lib/ecto_fdb_relational/: adapter.ex  application.ex  ddl.ex  error.ex  native.ex  protocol.ex  query.ex  schema_template.ex  types.ex
lib/ecto_fdb_relational/adapter/: connection.ex
lib/ecto_fdb_relational/grpc/: continuation.pb.ex  jdbc.pb.ex
lib/ecto_fdb_relational/native/: classpath.ex
lib/ecto_fdb_relational/proto/: column.pb.ex  jdbc.pb.ex  result_set.pb.ex
native/ecto_fdb_relational_nif/: Cargo.toml  build.rs
native/ecto_fdb_relational_nif/src/: lib.rs
native/frl_bridge/src/main/java/bridge/: Bridge.java
rfd/: 0001.md
test/: bench_tpcc_test.exs
test/ecto_fdb_relational/: integration_test.exs  schema_template_test.exs  types_property_test.exs  types_test.exs
test/ecto_fdb_relational/adapter/: connection_test.exs
test/support/: post.ex  repo.ex
